<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/playlistFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="Playlists" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="Wishlistt" />

</menu>